--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <i class="fa-solid fa-bolt"></i>
       </div>
     </div>
-    <header class="welcom-header">
-      <h1 class="welcom-header__title">Welcome to KokoaTalk</h1>
-      <p class="welcom-header__text">
+    <header class="welcome-header">
+      <h1 class="welcome-header__title">Welcome to Kokoa Talk</h1>
+      <p class="welcome-header__text">
         If you have a Kokoa Account, log in with your email or phone number
       </p>
     </header>
@@ -30,7 +30,7 @@
     <form id="login-form">
       <input type="text" placeholder="Email or phone number" />
       <input type="password" placeholder="password" />
-      <input type="submit" value="log In" />
+      <input type="submit" value="Log In" />
       <a href="#">Find Kokoa Account or password</a>
     </form>
     <script
