--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </p>
     </header>
 
-    <form id="login-form">
+    <form id="login-form" action="friends.html" method="get">
       <input type="text" placeholder="Email or phone number" />
       <input type="password" placeholder="password" />
       <input type="submit" value="Log In" />
