--- a/friends.html
+++ b/friends.html
@@ -63,8 +63,10 @@
             </div>
           </div>
           <div class="user-component__column">
-            <span>2</span>
-            <i class="fa-solid fa-chevron-right fa-xs"></i>
+            <div>
+              <span>2</span>
+              <i class="fa-solid fa-chevron-right fa-xs"></i>
+            </div>
           </div>
         </div>
       </div>
@@ -78,18 +80,18 @@
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__a" href="#">
-            <span class="nav__notification">1</span>
+          <a class="nav__a" href="chats.html">
+            <span class="nav__notification badge">1</span>
             <i class="fa-regular fa-comment fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__a" href="#"
+          <a class="nav__a" href="find.html"
             ><i class="fa-solid fa-magnifying-glass fa-2x"></i
           ></a>
         </li>
         <li class="nav__btn">
-          <a class="nav__a" href="#">
+          <a class="nav__a" href="more.html">
             <span class="nav__dot"></span
             ><i class="fa-solid fa-ellipsis fa-2x"></i
           ></a>
