--- a/find.html
+++ b/find.html
@@ -30,18 +30,18 @@
     </header>
 
     <main class="main__screen">
-      <div class="find-icons">
-        <div class="find-icons__icon">
+      <div class="icon-row">
+        <div class="icon-row__icon">
           <i class="fa-solid fa-qrcode"></i><span>QR Code</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="fa-regular fa-address-book"></i
           ><span>Add by Contracts</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="fa-solid fa-fingerprint"></i><span>Add by ID</span>
         </div>
-        <div class="find-icons__icon">
+        <div class="icon-row__icon">
           <i class="fa-regular fa-envelope"></i><span>Invite</span>
         </div>
       </div>
@@ -59,8 +59,8 @@
       </div>
       <div class="open-post">
         <div class="open-post__column">
-          <h5 class="open-post__title">#BTS</h5>
-          <h6 class="open-post__hashtags">#bts#army#friends</h6>
+          <h5 class="open-post__title">#Rick and Morty</h5>
+          <h6 class="open-post__hashtags">#rick#morty#anime</h6>
           <div class="open-post__members">
             <img src="보노보노.png" />
             <span class="open-post__member-count">802 members</span>
