--- a/friends.html
+++ b/friends.html
@@ -98,7 +98,7 @@
         </li>
       </ul>
     </nav>
-
+    <div id="splash-screen"><i class="fa-solid fa-comment"></i></div>
     <script
       src="https://kit.fontawesome.com/361a1033ff.js"
       crossorigin="anonymous"
